# Agentic-System-Lecture

./: .gitignore  pyproject.toml
Lectures/01-Basic-LLM-Response/: 01-Basic-LLM-Response.ipynb
Lectures/02-MCP-Basic/: 02.01-MCP-Server.ipynb  02.02-MCP-Client.ipynb
